--- a/package.json
+++ b/package.json
@@ -28,14 +28,76 @@
     "react-component"
   ],
   "scripts": {
-    "clean": "../node_modules/.bin/rimraf lib",
+    "clean": "./node_modules/.bin/rimraf lib",
     "build": "yarn clean && yarn build:js && yarn build:ts && yarn build:css",
-    "build:js": "../node_modules/.bin/rollup --config ../rollup.config.js",
-    "build:ts": "../node_modules/.bin/cpx src/*.d.ts lib/",
-    "build:css": "node ../scripts/build-css.js $(pwd)",
+    "build:js": "./node_modules/.bin/rollup --config ./rollup.config.js",
+    "build:ts": "./node_modules/.bin/cpx src/*.d.ts lib/",
+    "build:css": "node ./scripts/build-css.js $(pwd)",
     "prepublish": "yarn build"
   },
   "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "@storybook/react": "^5.1.11",
+    "alex": "^4.0.1",
+    "animateplus": "^1.4.0",
+    "autoprefixer": "^6.7.6",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-rename-import": "^2.3.0",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^0.22.0",
+    "cpx": "^1.5.0",
+    "css-loader": "^0.26.2",
+    "css-modules-require-hook": "^4.0.2",
+    "dirty-chai": "^1.2.2",
+    "draft-js-buttons": "latest",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.2.2",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-react": "^6.10.0",
+    "estraverse-fb": "^1.3.1",
+    "express": "^4.15.0",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "flow-bin": "^0.69.0",
+    "husky": "^3.0.4",
+    "jsdom": "^11.3.0",
+    "linaria": "^1.4.0-alpha.1",
+    "lint-staged": "^9.2.3",
+    "matched": "^4.0.0",
+    "mocha": "^3.0.2",
+    "multer": "^1.3.0",
+    "postcss-loader": "^1.3.3",
+    "prettier": "^1.18.2",
+    "prismjs": "^1.5.1",
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-router": "^3.0.2",
+    "react-static-webpack-plugin": "2.1.0",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.3.4",
+    "rimraf": "^2.6.1",
+    "rollup": "^1.20.3",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.2",
+    "superagent": "^3.5.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
+  },
   "dependencies": {
     "clsx": "^1.0.4",
     "emojione": "^2.2.7",
